--- a/css/styles.css
+++ b/css/styles.css
@@ -1,157 +1,176 @@
-html{
+/* Base styles */
+html {
     line-height: 1.5;
     letter-spacing: 1.5px;
     font-kerning: normal;
-}
-body{
-    background-color: lightslategray;
-}
-main.lyrics_body{
-    width: 90%;
-    height: auto;
-    margin-top: 2%;
-    margin-bottom: 2%;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: lightblue;
-    box-shadow: 15px 15px 10px black, -15px -15px 10px black;
-    border-radius: 1cm;
-}
-div.padding{
-    padding-top: 2%;
-    padding-bottom: 2%;
+    font-size: 16px;
 }
 
-/*About section*/
-div.info{
-    height:auto;
-    width: 30%;
-    border-radius: 0.2cm;
-    background-color: ghostwhite;
-    position: absolute;
-    margin-left: 2%;
-    box-shadow: 5px 5px 10px black, -5px -5px 10px black;
+body {
+    background-color: lightslategray;
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
 }
-img{
-    width: 250px;
-    height: 250px;
+
+main.lyrics_body {
+    width: min(95%, 1400px);
+    margin: 2% auto;
+    background-color: lightblue;
+    box-shadow: 15px 15px 10px black, -15px -15px 10px black;
+    border-radius: 1rem;
+    position: relative;
+}
+
+div.padding {
+    padding: 2%;
+    display: flex;
+    gap: 2rem;
+    flex-wrap: wrap;
+}
+
+/* About section */
+div.info {
+    height: auto;
+    width: clamp(280px, 30%, 400px);
+    border-radius: 0.2rem;
+    background-color: ghostwhite;
+    box-shadow: 5px 5px 10px black, -5px -5px 10px black;
+    flex: 1;
+    min-width: 280px;
+}
+
+img {
+    width: min(250px, 90%);
+    height: auto;
+    aspect-ratio: 1/1;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 3%;
-    margin-bottom: 3%;
+    margin: 3% auto;
     transition: all 0.3s ease;
     box-shadow: 5px 5px 10px darkblue, 10px 10px 5px lightblue;
 }
-img:hover{
+
+img:hover {
     box-shadow: -5px -5px 10px darkblue, -10px -10px 5px lightblue;
-    width: 300px;
-    height: 300px;
+    width: min(300px, 95%);
+    height: auto;
 }
-audio{
+
+audio {
+    width: min(90%, 300px);
     box-shadow: 5px 5px 10px black, -5px -5px 10px black;
-    border-radius: 1cm;
-    margin-top: 2%;
-    margin-left: 16%;
+    border-radius: 1rem;
+    margin: 2% auto;
+    display: block;
 }
-li{
+
+li {
     list-style: none;
     text-align: center;
-    margin-right: 8%;
-    font-family:cursive;
+    margin: 0.5rem 8% 0.5rem 0;
+    font-family: cursive;
     font-weight: bold;
 }
-h1#ab{
-    font-size: larger;
+
+h1#ab {
+    font-size: clamp(1.2rem, 2.5vw, 2rem);
     font-weight: bold;
     text-align: center;
 }
-h1#ab:hover{
+
+h1#ab:hover {
     text-decoration: underline;
-    font-size: 5ch;
+    font-size: clamp(1.5rem, 3vw, 2.5rem);
     color: darkblue;
     font-family: algerian;
-    text-shadow: -5px -5px 5px lightblue, -5px -5px 5px darkblue ;
+    text-shadow: -5px -5px 5px lightblue, -5px -5px 5px darkblue;
 }
-p.about{
+
+p.about {
     width: 80%;
     text-align: center;
     font-family: 'Mooli', sans-serif;
     font-weight: bold;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 1rem auto;
     color: black;
-    font-size:small;
-}
-p.about:hover{
-    font-size: large;
+    font-size: clamp(0.875rem, 1.5vw, 1rem);
 }
 
-/*Lyrics Section*/
-div.lyrics{
+p.about:hover {
+    font-size: clamp(1rem, 2vw, 1.25rem);
+}
+
+/* Lyrics Section */
+div.lyrics {
     background-color: white;
-    font-size:larger;
-    width: 55%;
-    height: 100%; 
-    position: relative; 
-    margin-left: 38%;
-    margin-right: 0%;
-    padding: 15px 30px 15px 30px;
-    border-radius: 1cm;
+    font-size: clamp(1rem, 1.5vw, 1.25rem);
+    flex: 2;
+    min-width: 320px;
+    height: 100%;
+    padding: 15px 30px;
+    border-radius: 1rem;
     box-shadow: 5px 5px 10px black, -5px -5px 10px black;
 }
-header{
-    font-size: 8ch;
+
+header {
+    font-size: clamp(2rem, 8vw, 8ch);
     text-align: center;
     text-transform: uppercase;
-    margin-bottom: 2%;
+    margin: 2% 0;
     font-family: 'Permanent Marker', cursive;
     transition: all 0.6s ease;
     text-decoration: line-through;
-    border-radius: 1cm;
-    margin-top: 2%;
-    margin-bottom: 2%;
+    border-radius: 1rem;
 }
-header:hover{
+
+header:hover {
     color: darkblue;
-    font-size: 9ch;
-    text-shadow: -5px -5px 5px lightblue, -5px -5px 5px darkblue ;
+    font-size: clamp(2.5rem, 9vw, 9ch);
+    text-shadow: -5px -5px 5px lightblue, -5px -5px 5px darkblue;
     text-decoration: none;
     font-family: algerian;
     box-shadow: 10px 10px 20px black;
 }
-h1#ly{
+
+h1#ly {
     text-align: center;
-    font-size: xx-large;
+    font-size: clamp(1.5rem, 3vw, 2rem);
     text-transform: uppercase;
 }
-h1#ly:hover{
+
+h1#ly:hover {
     text-decoration: underline;
-    font-size: 5ch;
+    font-size: clamp(2rem, 4vw, 5ch);
     color: darkblue;
     font-weight: lighter;
     font-family: algerian;
-    text-shadow: -5px -5px 5px lightblue, -5px -5px 5px darkblue ;
+    text-shadow: -5px -5px 5px lightblue, -5px -5px 5px darkblue;
 }
-p{
-    width: 65%;
+
+p {
+    width: min(65%, 600px);
     text-align: center;
     font-family: 'Mooli', sans-serif;
     font-weight: bold;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 1rem auto;
     transition: all 0.3s ease;
 }
-div.lyrics p::before{
+
+div.lyrics p::before {
     content: "''";
 }
-div.lyrics p::after{
+
+div.lyrics p::after {
     content: "''";
 }
-div.lyrics p:last-child:hover{
-    width: 65%;
-    height: 200%;
-    padding: 15px 30px 15px 30px;
+
+/* Common hover styles for paragraphs */
+[class^="paragraph_"]:hover,
+div.lyrics p:last-child:hover {
+    width: min(65%, 600px);
+    height: auto;
+    min-height: 200%;
+    padding: 15px 30px;
     background-image: linear-gradient(to bottom right, lightblue, lightslategray);
     box-shadow: 5px 5px 15px darkblue, -5px -5px 15px lightblue;
     color: black;
@@ -159,113 +178,42 @@ div.lyrics p:last-child:hover{
     margin-right: auto;
     font-family: 'Vollkorn', serif;
 }
-.paragraph_1:hover{
-    width: 65%;
-    height: 200%;
-    padding: 15px 30px 15px 30px;
-    background-image: linear-gradient(to bottom right, lightblue, lightslategray);
-    box-shadow: 5px 5px 15px darkblue, -5px -5px 15px lightblue;
-    color: black;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Vollkorn', serif;
+
+/* Media Queries */
+@media screen and (max-width: 768px) {
+    div.padding {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    div.info {
+        width: 100%;
+        margin: 0 auto;
+    }
+    
+    div.lyrics {
+        width: 100%;
+        margin: 0 auto;
+        padding: 15px;
+    }
+    
+    p, [class^="paragraph_"]:hover,
+    div.lyrics p:last-child:hover {
+        width: 85%;
+    }
 }
-.paragraph_2:hover{
-    width: 65%;
-    height: 200%;
-    padding: 15px 30px 15px 30px;
-    background-image: linear-gradient(to bottom right, lightblue, lightskyblue);
-    box-shadow: 5px 5px 15px darkblue, -5px -5px 15px lightblue;
-    color: black;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Vollkorn', serif;
-}
-.paragraph_3:hover{
-    width: 65%;
-    height: 200%;
-    padding: 15px 30px 15px 30px;
-    background-image: linear-gradient(to bottom right, lightblue, lightslategray);
-    box-shadow: 5px 5px 15px darkblue, -5px -5px 15px lightblue;
-    color: black;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Vollkorn', serif;
-}
-.paragraph_4:hover{
-    width: 65%;
-    height: 200%;
-    padding: 15px 30px 15px 30px;
-    background-image: linear-gradient(to bottom right, lightblue, lightskyblue);
-    box-shadow: 5px 5px 15px darkblue, -5px -5px 15px lightblue;
-    color: black;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Vollkorn', serif;
-}
-.paragraph_5:hover{
-    width: 65%;
-    height: 200%;
-    padding: 15px 30px 15px 30px;
-    background-image: linear-gradient(to bottom right, lightblue, lightslategray);
-    box-shadow: 5px 5px 15px darkblue, -5px -5px 15px lightblue;
-    color: black;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Vollkorn', serif;
-}
-.paragraph_6:hover{
-    width: 65%;
-    height: 200%;
-    padding: 15px 30px 15px 30px;
-    background-image: linear-gradient(to bottom right, lightblue, lightskyblue);
-    box-shadow: 5px 5px 15px darkblue, -5px -5px 15px lightblue;
-    color: black;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Vollkorn', serif;
-}
-.paragraph_7:hover{
-    width: 65%;
-    height: 200%;
-    padding: 15px 30px 15px 30px;
-    background-image: linear-gradient(to bottom right, lightblue, lightslategray);
-    box-shadow: 5px 5px 15px darkblue, -5px -5px 15px lightblue;
-    color: black;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Vollkorn', serif;
-}
-.paragraph_8:hover{
-    width: 65%;
-    height: 200%;
-    padding: 15px 30px 15px 30px;
-    background-image: linear-gradient(to bottom right, lightblue, lightskyblue);
-    box-shadow: 5px 5px 15px darkblue, -5px -5px 15px lightblue;
-    color: black;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Vollkorn', serif;
-}
-.paragraph_9:hover{
-    width: 65%;
-    height: 200%;
-    padding: 15px 30px 15px 30px;
-    background-image: linear-gradient(to bottom right, lightblue, lightslategray);
-    box-shadow: 5px 5px 15px darkblue, -5px -5px 15px lightblue;
-    color: black;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Vollkorn', serif;
-}
-.paragraph_10:hover{
-    width: 65%;
-    height: 200%;
-    padding: 15px 30px 15px 30px;
-    background-image: linear-gradient(to bottom right, lightblue, lightskyblue);
-    box-shadow: 5px 5px 15px darkblue, -5px -5px 15px lightblue;
-    color: black;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Vollkorn', serif;
+
+@media screen and (max-width: 480px) {
+    html {
+        font-size: 14px;
+    }
+    
+    div.padding {
+        padding: 1rem;
+    }
+    
+    audio {
+        width: 95%;
+        margin: 1rem auto;
+    }
 }
